<resources>
    <string name="app_name">CricApp</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="Score">Score:</string>
    <string name="S123">123</string>
    <string name="status">status</string>
    <string name="date_dummy">01-03-2022</string>
    <string name="no_of_players">Number of Players:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="batter_per_team">Batters per Team</string>
    <string name="overs_per_innings">Overs per Innings</string>
    <string name="max_overs_per_bowlers">Max over per bowler</string>
    <string name="superover">Superover</string>
    <string name="continue_">continue</string>
    <string name="present_matches">Present Matches</string>
    <string name="resent_matches">Recent Matches</string>
    <string name="start_match">Start Match</string>
    <string name="new_match">New Match</string>
    <string name="match_config">Match Configuration</string>
    <string name="add">add</string>
    <string name="team_name">Team Name</string>
    <string name="add_team">Add Team</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_player">Add Players</string>
    <string name="player_name">Enter player name</string>
    <string name="player_number">Enter player number</string>
    <string name="players">Players</string>
    <string name="Done">Done</string>
    <string name="team_selection">Team Selection</string>
    <string name="vs">VS</string>
    <string name="toss_won_by">Toss won by</string>
    <string name="toss">Toss</string>
    <string name="elected_to">Elected to</string>
    <string name="bat">Bat</string>
    <string name="bowl">Bowl</string>
    <string name="select_team">Select Team</string>
    <string name="ok">OK</string>
</resources>