<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/team_selection"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/black" />
    </LinearLayout>

   <androidx.cardview.widget.CardView
       android:id="@+id/cv_team_a"
       android:clickable="true"
       android:focusable="true"
       android:layout_marginTop="@dimen/ten_margin"
       android:layout_width="match_parent"
       android:layout_height="150dp"
       android:layout_marginHorizontal="@dimen/fifteen_margin"
       app:cardCornerRadius="@dimen/five_margin"
       app:cardElevation="@dimen/ten_margin"
       >
       <TextView
           android:id="@+id/tv_team_a"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:gravity="center"
           android:hint="Multan Sultan"
           android:textStyle="bold"
           android:maxLines="1"
           android:textSize="30sp"
           />
   </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginVertical="@dimen/ten_margin"
        android:gravity="center"
        android:text="@string/vs"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:maxLines="1"
        android:textSize="30sp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_team_b"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="@dimen/fifteen_margin"
        app:cardCornerRadius="@dimen/five_margin"
        app:cardElevation="@dimen/ten_margin"
        >
        <TextView
            android:id="@+id/tv_team_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:hint="Lahore Qalander"
            android:textStyle="bold"
            android:maxLines="1"
            android:textSize="30sp"
            />
    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five_margin"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/toss"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/black" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:padding="@dimen/five_margin"
        android:text="@string/toss_won_by"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />
    <RadioGroup
        android:id="@+id/rg_toss"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rb_team_a"
            android:layout_marginHorizontal="@dimen/fifteen_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/team_name"/>
        <RadioButton
            android:id="@+id/rb_team_b"
            android:layout_marginHorizontal="@dimen/fifteen_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/team_name"/>


    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:padding="@dimen/five_margin"
        android:text="@string/elected_to"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/rg_bat_bowl"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rb_bat"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/fifteen_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bat"/>
        <RadioButton
            android:id="@+id/rb_bowl"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/fifteen_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bowl"/>


    </RadioGroup>
</androidx.appcompat.widget.LinearLayoutCompat>